--- a/Data Manipulation/GUI data to XML dictionary.xaml
+++ b/Data Manipulation/GUI data to XML dictionary.xaml
@@ -1,8 +1,8 @@
 <Activity mc:Ignorable="sap sap2010" x:Class="GUI_data_to_XML_dictionary" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
-    <x:Property Name="in_CaseInformation" Type="InOutArgument(scg:Dictionary(x:String, x:String))" />
     <x:Property Name="in_NoDataFound" Type="InArgument(x:String)" />
     <x:Property Name="in_GUICaseDictionary" Type="InArgument(scg:Dictionary(x:String, x:String))" />
+    <x:Property Name="io_CaseInformation" Type="InOutArgument(scg:Dictionary(x:String, x:String))" />
   </x:Members>
   <this:GUI_data_to_XML_dictionary.in_NoDataFound>
     <InArgument x:TypeArguments="x:String" />
@@ -10,7 +10,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1708,1826</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1771,2054</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GUI_data_to_XML_dictionary_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -69,15 +69,16 @@
       <AssemblyReference>System.ValueTuple</AssemblyReference>
       <AssemblyReference>NPOI</AssemblyReference>
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
+      <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="GUI_data_to_XML_dictionary" sap:VirtualizedContainerService.HintSize="850,1761" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="GUI_data_to_XML_dictionary" sap:VirtualizedContainerService.HintSize="850,1989" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Sequence DisplayName="GUI data to XML dictionary" sap:VirtualizedContainerService.HintSize="808,1673" sap2010:WorkflowViewState.IdRef="Sequence_8">
+    <Sequence DisplayName="GUI data to XML dictionary" sap:VirtualizedContainerService.HintSize="808,1901" sap2010:WorkflowViewState.IdRef="Sequence_8">
       <Sequence.Variables>
         <Variable x:TypeArguments="scg:Dictionary(x:String, x:String)" Name="TEMP" />
       </Sequence.Variables>
@@ -86,50 +87,51 @@
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
+      <ui:Comment sap:VirtualizedContainerService.HintSize="746,190" sap2010:WorkflowViewState.IdRef="Comment_1" Text="//  Denna funktion lägger till den information som saknas i den dict som har byggts upp från XML:en. &#xA;&#xA;Det är den dict från XML:en som är den primära, så den som ska fyllas på med information från den dict som kommer från GUI:et. " />
       <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="746,92" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Write GUI data to XML data dictionary where information is missing. XML information is primarily.&quot;]" />
       <Assign DisplayName="Assign - Temp Dictionary" sap:VirtualizedContainerService.HintSize="746,82" sap2010:WorkflowViewState.IdRef="Assign_3">
         <Assign.To>
           <OutArgument x:TypeArguments="scg:Dictionary(x:String, x:String)">[TEMP]</OutArgument>
         </Assign.To>
         <Assign.Value>
-          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:String)">[in_CaseInformation.Copy()]</InArgument>
+          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:String)">[io_CaseInformation.Copy()]</InArgument>
         </Assign.Value>
       </Assign>
-      <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="746,1186" sap2010:WorkflowViewState.IdRef="ForEach`1_7" Values="[in_CaseInformation.Keys]">
+      <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="746,1185" sap2010:WorkflowViewState.IdRef="ForEach`1_7" Values="[io_CaseInformation.Keys]">
         <ui:ForEach.Body>
           <ActivityAction x:TypeArguments="x:String">
             <ActivityAction.Argument>
               <DelegateInArgument x:TypeArguments="x:String" Name="currentItem" />
             </ActivityAction.Argument>
-            <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="710,1060" sap2010:WorkflowViewState.IdRef="Sequence_7">
+            <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="710,1059" sap2010:WorkflowViewState.IdRef="Sequence_7">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <If Condition="[in_CaseInformation(currentItem).Trim.Equals(in_NoDataFound)]" DisplayName="If - Value in dictionary is empty" sap:VirtualizedContainerService.HintSize="668,972" sap2010:WorkflowViewState.IdRef="If_2">
+              <If Condition="[io_CaseInformation(currentItem).Trim.Equals(in_NoDataFound)]" DisplayName="If - Value in dictionary is empty" sap:VirtualizedContainerService.HintSize="668,971" sap2010:WorkflowViewState.IdRef="If_2">
                 <If.Then>
-                  <Sequence sap:VirtualizedContainerService.HintSize="632,783" sap2010:WorkflowViewState.IdRef="Sequence_5">
+                  <Sequence sap:VirtualizedContainerService.HintSize="632,782" sap2010:WorkflowViewState.IdRef="Sequence_5">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="590,695" sap2010:WorkflowViewState.IdRef="ForEach`1_6" Values="[in_GUICaseDictionary.Keys]">
+                    <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="590,694" sap2010:WorkflowViewState.IdRef="ForEach`1_6" Values="[in_GUICaseDictionary.Keys]">
                       <ui:ForEach.Body>
                         <ActivityAction x:TypeArguments="x:String">
                           <ActivityAction.Argument>
                             <DelegateInArgument x:TypeArguments="x:String" Name="GUIcurrentItem" />
                           </ActivityAction.Argument>
-                          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="554,569" sap2010:WorkflowViewState.IdRef="Sequence_4">
+                          <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="554,568" sap2010:WorkflowViewState.IdRef="Sequence_4">
                             <sap:WorkflowViewStateService.ViewState>
                               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                               </scg:Dictionary>
                             </sap:WorkflowViewStateService.ViewState>
-                            <If Condition="[currentItem.Equals(GUIcurrentItem)]" DisplayName="If - Same Key is found" sap:VirtualizedContainerService.HintSize="512,481" sap2010:WorkflowViewState.IdRef="If_1">
+                            <If Condition="[currentItem.ToLower.Trim.Equals(GUIcurrentItem.Trim.ToLower)]" DisplayName="If - Same Key is found" sap:VirtualizedContainerService.HintSize="512,480" sap2010:WorkflowViewState.IdRef="If_1">
                               <If.Then>
-                                <Sequence sap:VirtualizedContainerService.HintSize="476,292" sap2010:WorkflowViewState.IdRef="Sequence_2">
+                                <Sequence sap:VirtualizedContainerService.HintSize="476,291" sap2010:WorkflowViewState.IdRef="Sequence_2">
                                   <Sequence.Variables>
                                     <Variable x:TypeArguments="x:String" Name="KeyValue" />
                                   </Sequence.Variables>
@@ -146,7 +148,7 @@
                                       <InArgument x:TypeArguments="x:String">[currentItem.ToString]</InArgument>
                                     </Assign.Value>
                                   </Assign>
-                                  <Assign DisplayName="Assign - Write GUI information to CaseInformation " sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_2">
+                                  <Assign DisplayName="Assign - Write GUI information to CaseInformation " sap:VirtualizedContainerService.HintSize="434,81" sap2010:WorkflowViewState.IdRef="Assign_2">
                                     <Assign.To>
                                       <OutArgument x:TypeArguments="x:String">[TEMP.Item(KeyValue)]</OutArgument>
                                     </Assign.To>
@@ -192,9 +194,9 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:ForEach>
-      <Assign DisplayName="Assign - Overwrite Dictionary with TEMP" sap:VirtualizedContainerService.HintSize="746,82" sap2010:WorkflowViewState.IdRef="Assign_4">
+      <Assign DisplayName="Assign - Overwrite Dictionary with TEMP" sap:VirtualizedContainerService.HintSize="746,81" sap2010:WorkflowViewState.IdRef="Assign_4">
         <Assign.To>
-          <OutArgument x:TypeArguments="scg:Dictionary(x:String, x:String)">[in_CaseInformation]</OutArgument>
+          <OutArgument x:TypeArguments="scg:Dictionary(x:String, x:String)">[io_CaseInformation]</OutArgument>
         </Assign.To>
         <Assign.Value>
           <InArgument x:TypeArguments="scg:Dictionary(x:String, x:String)">[TEMP]</InArgument>
